--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,9 +23,7 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <%# avatar_url = current_user.facebook_picture_url || current_user.first_name.upcase  %>
-        <% avatar_url = current_user.facebook_picture_url || "default-avatar.jpg" %>
-        <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-
+        <%= display_avatar %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
             <%= link_to edit_user_registration_path do %>
