fix datepicker bug & add style on button in show coworking

--- a/app/assets/stylesheets/coworkings/_show_coworking.scss
+++ b/app/assets/stylesheets/coworkings/_show_coworking.scss
@@ -73,6 +73,9 @@
   em {
     font-size: 15px;
   }
+  & > button {
+    min-width: 90%;
+  }
   .highlight-price {
     display: inline-block;
     box-shadow: inset 0px -12px $my-green;
