--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <%# avatar_url = current_user.facebook_picture_url || current_user.first_name.upcase  %>
-        <%= display_avatar %>
+        <%= display_avatar_navbar %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
             <%= link_to edit_user_registration_path do %>
