--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -5,6 +5,7 @@
 }
 .avatar-large {
   width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
 
@@ -50,5 +51,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
   text-shadow: 1px 1px rgba(0,0,0,0.2);
 }
