--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -21,7 +21,7 @@
           <p> - Discuter via la <b>messagerie</b> pour organiser une visite ou poser des questions</p>
           <p> - Demander des <b>devis personnalisés</b> aux propriétaires des espaces</p>
           <p> - Être accompagné lors des <b>visites</b></p>
-          <p> - Bénéficier des <b>paiements automatisés</b> par virements sécurisés</p>
+          <!-- <p> - Bénéficier des <b>paiements automatisés</b> par virements sécurisés</p> -->
           <p>Nos équipes vous facilitent l’accès aux informations et à la compréhension des différents services proposés.</p>
         </div>
         <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
@@ -37,12 +37,12 @@
           <h3>Besoin de <b>conseils</b> pour choisir la meilleure solution pour vos équipes ? </h3>
           <p>Remplissez <b>gratuitement</b> votre cahier des charges dans la <b>recherche spécifique</b></p>
           <p>Nous proposons, sur <b>devis personnalisé</b> (nous contacter) :</p>
-          <p> - <b>Analyse de l’existant</b> et élaboration d’un cahier des charges exhaustif</p>
-          <p> - <b>Analyse du marché</b> (contexte et offres disponibles)</p>
-          <p> - Présélection, visites et élaboration d’une <b>short list</b></p>
-          <p> - Assistance à la <b>négociation</b></p>
-          <p> - <b>Benchmarks financiers</b> des alternatives</p>
-          <p> - <b>Recommandations</b> commerciales sur les engagements contractuels</p>
+          <p> - L'<b>analyse de l’existant</b> et élaboration d’un cahier des charges exhaustif</p>
+          <p> - L'<b>analyse du marché</b> (contexte et offres disponibles)</p>
+          <p> - La Présélection, visites et élaboration d’une <b>short list</b></p>
+          <p> - L'assistance à la <b>négociation</b></p>
+          <p> - Des <b>Benchmarks financiers</b> des alternatives</p>
+          <p> - Nos <b>Recommandations</b> commerciales sur les engagements contractuels</p>
           <p>Un consultant expérimenté en immobilier d’entreprise vous accompagne tout au long du projet.</p>
         </div>
       </div>
@@ -54,10 +54,10 @@
           <p>Nous proposons tout inclus  :</p>
           <p> - Une <b>interface de gestion</b> des demandes et des devis</p>
           <p> - L’accompagnement des <b>demandes qualifiées</b> pour la visite des espaces</p>
-          <p> - La <b>gestion des paiements</b> et des facturations récurrentes</p>
-          <p> - <b>Rapports périodiques</b> de commercialisation (digital et physique)</p>
-          <p> - Recommandations sur le <b>positionnement</b></p>
-          <h3>Nos honoraires sont de <b>10%</b> du montant du loyer, uniquement <b>au succès</b> et sur la période d’engagement <em>(n’excédant pas 1 an)</em>.</h3>
+         <!--  <p> - La <b>gestion des paiements</b> et des facturations récurrentes</p> -->
+          <p> - Des <b>Rapports périodiques</b> de commercialisation (digital et physique)</p>
+          <p> - Nos Recommandations sur le <b>positionnement</b></p>
+          <h3>Nos honoraires sont de <b>10%</b><em>(ht)</em> du montant du loyer, uniquement <b>au succès</b> et sur la période d’engagement <em>(n’excédant pas 1 an)</em>.</h3>
         </div>
         <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
           <%= image_tag 'Tower.svg', width: 200, height: 200 %>
