content wrapper id

--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -1,4 +1,4 @@
- <div class="content-wrapper">
+ <div id="content-wrapper">
  <% current_user.coworkings.each do |coworking| %>
  <% coworking.briefs.each do |brief| %>
 <div id="accordion" role="tablist" aria-multiselectable="true">
