--- a/app/views/propositions/_my_propositions.html.erb
+++ b/app/views/propositions/_my_propositions.html.erb
@@ -1,3 +1,4 @@
+<div id="content-wrapper">
 <div class="container">
   <div class="row">
     <% unless current_user.owner %>
@@ -23,4 +24,4 @@
     <% end %>
   </div>
 </div>
-
+</div>
