--- a/app/views/propositions/_proposition_if_user_is_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_owner.html.erb
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div id="content-wrapper">
 <% @coworkings.each do |coworking| %>
 <% coworking.briefs.each do |brief| %>
 <% brief.propositions.each do |proposition| %>
