--- a/app/views/briefs/_my_briefs.html.erb
+++ b/app/views/briefs/_my_briefs.html.erb
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div id="content-wrapper">
 <div class="container">
   <div class="row">
     <% unless current_user.owner %>
