--- a/app/views/briefs/_no_brief.html.erb
+++ b/app/views/briefs/_no_brief.html.erb
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div id="content-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
