--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div id="content-wrapper">
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
