--- a/app/views/coworkings/_contact_form.html.erb
+++ b/app/views/coworkings/_contact_form.html.erb
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h5 class="modal-title" id="create-contact">Demande d'information pour <%= @coworking.name.upcase %> - <%= @coworking.address %> <%= @coworking.city %> <%= @coworking.zip_code %></h5>
+        <h5 class="modal-title" id="create-contact">Demande d'information pour le <%= @coworking.address %> <%= @coworking.city %> <%= @coworking.zip_code %></h5>
         <p><em>Voux pourrez retrouver vos messages dans votre messagerie</em></p>
       </div>
       <div class="modal-body">
