anonymat dans new brief

--- a/app/views/briefs/_new_brief.html.erb
+++ b/app/views/briefs/_new_brief.html.erb
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h5 class="modal-title" id="create-brief">Demande de proposition pour <%= @coworking.name.upcase %> - <%= @coworking.address %> <%= @coworking.city %> <%= @coworking.zip_code %></h5>
+        <h5 class="modal-title" id="create-brief">Demande de proposition pour le <%= @coworking.address %> <%= @coworking.city %> <%= @coworking.zip_code %></h5>
         <p><em>Voux pourrez retrouver votre demande dans votre tableau de bord</em></p>
       </div>
       <div class="modal-body">
