offer with mac pictures

--- a/app/assets/stylesheets/pages/_tarifs.scss
+++ b/app/assets/stylesheets/pages/_tarifs.scss
@@ -2,7 +2,7 @@
   border: 1px solid solid rgba(0, 0, 0, 0.1);
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   border-top: 5px solid $my-green;
-  background-color: $my-white;
+  background-color: white;
   margin-top: -5px;
   text-align: justify;
   margin-bottom: 20px;
