--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -34,19 +34,19 @@
           <p>Toutes ces raisons nous ont poussé à développer The Real Estate Jungle afin de proposer un conseil adapté aux startups et grands groupes recherchant, pour l’un des locaux pour la première fois ou en raison d’une forte croissance par exemple, pour l’autre recherchant des espaces flexibles bénéficiant des nouveaux codes de l’immobilier d’entreprise.
             <br>
             <br>
-            L’approche de The Real Estate Jungle est essentiellement tournée vers l’analyse de scénarios comparant des bureaux traditionnels avec les espaces de Coworking. Tous les éléments sont pris en compte :
+            L’approche de The Real Estate Jungle est essentiellement tournée vers l’analyse de scénarios d'utilisation d'espaces de travail flexibles :
             <br>
             <br>
-            - Les coûts (loyer, charges, taxes, services, investissements initiaux, remise en état lors du départ, etc.)
+            - Propositions détaillés et personnalisées selon les critères de l'entreprise
             <br>
-            - La localisation
+            - Benchmark des propositions, l'entreprise est en mesure de comparer les coûts associés aux services proposés afin de bien comprendre ce qui est compris ou non
             <br>
-            - Les types d’engagement et leurs contraintes (bail classique, facture de Coworking, durée ferme, engagement court/moyen/long terme)
+            - L'approche consulting permet de mettre en évidence les différences de coûts entre un espace de travail flexible et une implantation classique
             <br>
-            - Les négociations potentielles
+            - Nous proposons un accompagnement pour négocier au mieux les termes des engagements que vous prendrez
             <br>
             <br>
-            Cette approche par coût complet permet d’avoir une vision claire des futures dépenses en immobilier, permettant aux chefs d’entreprises de prendre les bonnes décisions. Elle permet aussi de négocier au plus juste avec les propriétaires immobiliers ou les espaces de Coworking. </p>
+            Cette approche permet d’avoir une vision claire des futures dépenses en immobilier, permettant aux chefs d’entreprises de prendre les bonnes décisions. Elle permet aussi de négocier au plus juste avec les propriétaires immobiliers ou les espaces de Coworking. </p>
             <h2>Pourquoi le nom The Real Estate Jungle ?</h2>
             <p>Par métaphore la jungle représente le marché de l’immobilier d’entreprise. Il est rare de s’aventurer dans une jungle tropicale sans un guide. The Real Estate Jungle propose d’être ce guide dans la jungle urbaine. En effet l’immobilier d’entreprise est luxuriant et possède une multitude de types de bureaux et d’espaces de Coworking. En Sanskrit Jangala (origine du mot jungle) désigne des espaces non mis en valeur, nous souhaitons pouvoir mettre en valeur les espaces de travail en les sélectionnant de manière pragmatique et réfléchie tout en négociant les meilleures conditions. </p>
           </div>
