--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -25,12 +25,12 @@
           <p>Nos équipes vous facilitent l’accès aux informations et à la compréhension des différents services proposés.</p>
         </div>
         <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
-            <%= image_tag 'Chair-4.svg', width: 200, height: 200 %>
+            <%= image_tag 'User-search.png', width: 300, height: 200 %>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
-            <%= image_tag 'Analytics.svg', width: 200, height: 200 %>
+            <%= image_tag 'consulting.png', width: 300, height: 200 %>
         </div>
         <div class="col-xs-12 col-md-7 col-md-offset-1">
           <h2 class="highlight">CONSULTING</h2>
@@ -60,7 +60,7 @@
           <h3>Nos honoraires sont de <b>10%</b><em>(ht)</em> du montant du loyer, uniquement <b>au succès</b> et sur la période d’engagement <em>(n’excédant pas 1 an)</em>.</h3>
         </div>
         <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
-          <%= image_tag 'Tower.svg', width: 200, height: 200 %>
+          <%= image_tag 'chatroom2.png', width: 300, height: 200 %>
         </div>
       </div>
     </div>
