--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
        <p>Nous vous accompagnons gratuitement tout au long du projet pour que vous trouviez l'espace de travail et les conditions qui correspondent à votre ADN</p>
     </div>
   </div>
-  <%= link_to pages_concept_path, method: :get, class: 'form-search' do %>
+  <%= link_to pages_tarifs_path, method: :get, class: 'form-search' do %>
   <div class="flexbox">
   <%= submit_tag "Plus de détails sur notre concept", class: "btn btn-primary btn-concept-link", style:"text-decoration:none" %>
   </div>
