change icon for message in home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -150,7 +150,7 @@
  </div>
  <div class="card">
    <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
-     <%= image_tag "Checklist.svg", alt: "coworking" %>
+     <%= image_tag "Chat-2.svg", alt: "coworking" %>
      <h2 class="offer-title">Apprenez à vous connaître</h2>
      <p>Grâce à la messagerie vous pouvez prendre contact avec le prospect, organiser une visite ou encore demander des détails supplémentaires pour répondre au mieux aux besoins exprimés</p>
    </div>
