--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
           </div>
           <div class="col-xs-12 col-md-4 col-sm-4">
             <ul class="list-inline text-center">
-              <li><%= link_to "Contacts", pages_contact_path, class: "footer-links" %>
+              <li><%= link_to "Contacts", new_info_path, class: "footer-links" %>
               </li>
               <li><%= link_to "Concept", pages_concept_path, class: "footer-links" %>
               </li>
