--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -36,10 +36,10 @@
           <h2 class="highlight">CONSULTING</h2>
           <h3>Besoin de <b>conseils</b> pour choisir la meilleure solution pour vos équipes ? </h3>
           <p>Remplissez <b>gratuitement</b> votre cahier des charges dans la <b>recherche spécifique</b></p>
-          <p>Nous proposons, sur <b>devis personnalisé</b> (nous contacter) :</p>
-          <p> - L'<b>analyse de l’existant</b> et élaboration d’un cahier des charges exhaustif</p>
+          <p>Nous vous proposons ensuite sur <b>devis personnalisé</b> :</p>
+          <p> - L'<b>analyse de l’existant</b> et l'élaboration d’un cahier des charges exhaustif</p>
           <p> - L'<b>analyse du marché</b> (contexte et offres disponibles)</p>
-          <p> - La Présélection, visites et élaboration d’une <b>short list</b></p>
+          <p> - La Présélection, les visites et l'élaboration d’une <b>short list</b></p>
           <p> - L'assistance à la <b>négociation</b></p>
           <p> - Des <b>Benchmarks financiers</b> des alternatives</p>
           <p> - Nos <b>Recommandations</b> commerciales sur les engagements contractuels</p>
@@ -54,8 +54,8 @@
           <p>Nous proposons tout inclus  :</p>
           <p> - Une <b>interface de gestion</b> des demandes et des devis</p>
           <p> - L’accompagnement des <b>demandes qualifiées</b> pour la visite des espaces</p>
-         <!--  <p> - La <b>gestion des paiements</b> et des facturations récurrentes</p> -->
-          <p> - Des <b>Rapports périodiques</b> de commercialisation (digital et physique)</p>
+          <p> - La <b>messagerie</b> pour mieux échanger avec vos prospects</p>
+          <p> - Des <b>Rapports périodiques</b> de commercialisation (digitaux et physiques)</p>
           <p> - Nos Recommandations sur le <b>positionnement</b></p>
           <h3>Nos honoraires sont de <b>10%</b><em>(ht)</em> du montant du loyer, uniquement <b>au succès</b> et sur la période d’engagement <em>(n’excédant pas 1 an)</em>.</h3>
         </div>
