--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -160,7 +160,7 @@
     <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
        <%= image_tag "Euro-Coin.svg", alt: "coworking" %>
        <h2 class="offer-title">Commercialisation</h2>
-       <p>Fort de l'expérience dans l'immobilier d'entreprise, notre équipe se charge de trouver vos futurs clients et de leur démontrer la pertinence de choisir vos solutions </p>
+       <p>Fort de son expérience dans l'immobilier d'entreprise, l'équipe se charge de trouver vos futurs clients et de leur démontrer la pertinence de vos solutions </p>
     </div>
   </div>
   <div class="row">
