--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -41,7 +41,7 @@
           <p> - L'<b>analyse du marché</b> (contexte et offres disponibles)</p>
           <p> - La Présélection, les visites et l'élaboration d’une <b>short list</b></p>
           <p> - L'assistance à la <b>négociation</b></p>
-          <p> - Des <b>Benchmarks financiers</b> des alternatives</p>
+          <p> - Les <b>Benchmarks financiers</b> des alternatives</p>
           <p> - Nos <b>Recommandations</b> commerciales sur les engagements contractuels</p>
           <p>Un consultant expérimenté en immobilier d’entreprise vous accompagne tout au long du projet.</p>
         </div>
