--- a/app/assets/stylesheets/coworkings/_coworking-list.scss
+++ b/app/assets/stylesheets/coworkings/_coworking-list.scss
@@ -12,7 +12,7 @@
 .map_box {
   h3 {
     font-size: 20px;
-    color: #00C29A;
+    color: $my-green;
   }
   h2 {
     font-size: 15px;
@@ -49,8 +49,8 @@
     bottom: 15px;
   }
   .btn {
-      background-color: #29AB87;
-      border-color: #29AB87;
+      background-color: $my-green;
+      border-color: $my-green;
       font-size: 12px;
       width: auto;
       padding: 10px 10px;
