--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -147,8 +147,8 @@
  }
 
  .btn-search {
-  background-color: #29AB87;
-  border-color: #29AB87;
+  background-color: $my-green;
+  border-color: $my-green;
   font-size: 12px;
   width: auto;
   margin-left: -6px;
