--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -10,9 +10,9 @@
               <div class="container">
                 <div class="row">
                    <div class="col-xs-12 col-md-2">
-
-                      <% avatar_url = brief.user.facebook_picture_url || "default-avatar.jpg" %>
-                      <%= image_tag avatar_url, class: "product-image" %>
+                   <%= display_avatar_brief(brief) %>
+                      <%# avatar_url = brief.user.facebook_picture_url || "default-avatar.jpg" %>
+                      <%#= image_tag avatar_url, class: "product-image" %>
                     </div>
                     <div class="col-xs-12 col-md-8">
                      <div class='product-body'>
