add datepicker to new proposition

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,7 +22,7 @@
       <!--   </div> -->
         <div class="row">
           <div class="col-xs-12">
-          <p class="text-center">©TheRealEstateJungle</p>
+          <p class="text-center">©The Real Estate Jungle - 2017</p>
           </div>
         </div>
       </div>
