--- a/app/views/propositions/new.html.erb
+++ b/app/views/propositions/new.html.erb
@@ -75,13 +75,17 @@
         <div class="row">
         <h2>Conditions particulières</h2>
           <div class="col-xs-12 col-md-4">
-        <%= f.input :lease_start, label: "Date de prise d'effet" %>
+          <div id="new_demand" class="input-group date">
+        <%= f.input :lease_start, label: "Date de prise d'effet", class: "form-control" %>
+          </div>
           </div>
           <div class="col-xs-12 col-md-4">
         <%= f.input :lease_duration, label: "Durée d'engagement" %>
           </div>
           <div class="col-xs-12 col-md-4">
+          <div id="new_demand" class="input-group date">
         <%= f.input :mad_start, label: "Date de MAD" %>
+          </div>
           </div>
         </div>
         <div class="row">
