--- a/app/views/infos/new.html.erb
+++ b/app/views/infos/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <div class="row">
         <div class="col-xs-12 text-center">
-          <h1 class="highlight">Posez vos questions</h1>
+          <h1 class="highlight">Dites-nous tout !</h1>
         </div>
       </div>
         <div class="form-login">
