--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -197,7 +197,7 @@
         </div>
         <div class="modal-body-welcome">
           <p>Bonjour,</p>
-          <p>Je m'appelle Gautier Weigert, je suis le fondateur de The Real Estate Jungle. Merci de votre visite sur le site.</p>
+          <p>Je suis Gautier Weigert, fondateur de The Real Estate Jungle. Merci de votre visite sur le site.</p>
           <p>Nous sommes actuellement en version beta, nous travaillons tous les jours pour vous proposer une offre exhaustive d'espaces de travail flexibles qui, je l'espère, seront bientôt en ligne, consultables gratuitement sur le site.</p>
           <p>Nous avons décidé de développer The Real Estate Jungle pour <strong>accompagner les startups et les grands groupes</strong> dans leurs recherches d'espaces de travail correspondant aux nouvelles attentes des collaborateurs et aux besoins d'optimisation des entreprises.</p>
           <p>Nous souhaitons proposer un accès gratuit à l'offre de coworkings en France et en Europe via notre plateforme. <strong>N'hésitez pas à faire partie des "early adopters"</strong> en vous inscrivant simplement sur le site via Linkedin. Cela nous permettra de vous tenir au courant de notre développement.</p>
