add buble images dynamics

--- a/app/views/coworkings/_carousel_show.html.erb
+++ b/app/views/coworkings/_carousel_show.html.erb
@@ -2,16 +2,36 @@
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target=".carousel slide carousel-top-link" data-slide-to="0" class="active"></li>
+    <% if @coworking.photos.count > 1 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="1"></li>
+    <% end %>
+    <% if @coworking.photos.count > 2 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="2"></li>
+    <% end %>
+    <% if @coworking.photos.count > 3 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="3"></li>
+    <% end %>
+    <% if @coworking.photos.count > 4 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="4"></li>
+    <% end %>
+    <% if @coworking.photos.count > 5 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="5"></li>
+    <% end %>
+    <% if @coworking.photos.count > 6 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="6"></li>
+    <% end %>
+    <% if @coworking.photos.count > 7 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="7"></li>
+    <% end %>
+    <% if @coworking.photos.count > 8 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="8"></li>
+    <% end %>
+    <% if @coworking.photos.count > 9 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="9"></li>
+    <% end %>
+    <% if @coworking.photos.count > 10 %>
     <li data-target=".carousel slide carousel-top-link" data-slide-to="10"></li>
+    <% end %>
   </ol>
 
   <!-- Wrapper for slides -->
