--- a/app/views/briefs/_brief_if_user_is_not_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_not_owner.html.erb
@@ -31,7 +31,7 @@
          </div>
          <div id="brief-content_<%= brief.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= brief.id %>">
                <div class="brief-content">
-                 <div class="container">
+                 <!-- <div class="container"> -->
                    <div class="row">
                      <div class="col-xs-12 col-md-6">
                       <h2>Type de contrat</h2>
@@ -92,7 +92,7 @@
                     </ul>
                   </div>
                 </div>
-              </div>
+              <!-- </div> -->
             </div>
           </div>
         </div>
