--- a/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
@@ -34,7 +34,7 @@
        </div>
        <div id="proposition-content_<%= proposition.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= proposition.id %>">
           <div class="proposition-content">
-            <div class="container">
+            <!-- <div class="container"> -->
               <div class="row">
                <div class="col-xs-12 col-md-6">
                 <h2>Type de contrat</h2>
@@ -106,7 +106,7 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            <!-- </div> -->
           </div>
         </div>
       </div>
