--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -205,12 +205,12 @@ $card-radius:         0;
 }
 
 .btn {
-    background-color: #29AB87;
-    border-color: #29AB87;
+    background-color: $my-green;
+    border-color: $my-green;
     font-size: 12px;
     width: auto;
-    padding: 15px 25px;
-    font-family: "Montserrat", "sans-serif";
+    padding: 12px 25px;
+    font-family: $body-font;
     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.1);
